Added an extra field for a comment

--- a/app/views/pictures/new.html.erb
+++ b/app/views/pictures/new.html.erb
@@ -14,6 +14,10 @@
     <%= f.text_field "url" %>
   </p>
   <p>
+    <%= f.label "comment" %><br>
+    <%= f.text_field "comment" %>
+  </p>
+  <p>
     <%= f.submit "Save" %>
   </p>
   <% end %>
