--- a/app/views/pictures/edit.html.erb
+++ b/app/views/pictures/edit.html.erb
@@ -18,6 +18,10 @@
     <%= f.text_field "url" %>
   </p>
   <p>
+    <%= f.label "comment" %><br>
+    <%= f.text_field "comment" %>
+  </p>
+  <p>
     <%= submit_tag "Save" %>
   </p>
   <% end %>
