--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -3,5 +3,6 @@
 
 <% @pictures.each do |picture| %>
   <p><%= picture[:title] %>, <%= picture[:artist] %></p>
+  <p><%= picture[:comment] %></p>
 <%= link_to image_tag(picture.url), "/pictures/#{picture.id}" %>
 <% end %>
